[package]
name = "sand"
description = "Minimal countdown timer, similar to the sleep command, but constantly prints the time remaining (in place)"
version = "0.5.2"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/gridbugs/sand"
repository = "https://github.com/gridbugs/sand"

[dependencies]
tokio = { version = "1.15", features = ["macros", "time", "rt-multi-thread"] }
meap = "0.5"
parse_duration = "2.1"
chrono = "0.4"
